# parsley

./: .gitignore  Cargo.toml  README.md  bench.py  justfile  make_pmem_ramdisk.sh  plot.py  pyproject.toml  requirements.txt  rust-toolchain.toml
bench_runner/: Cargo.toml
bench_runner/src/: compare.rs  error.rs  main.rs  run.rs  statistics.rs  summary.rs
core/: Cargo.toml
core/src/: datum.rs  db.rs  lib.rs
core/src/sharding/: bench.rs  builder.rs  enums.rs  forward_futures.rs  mod.rs  shard.rs  types.rs
core/src/storage/: memory.rs  memory_durable.rs  mod.rs
design/: book.toml
design/src/: 1_high_level_overview.md  2_sharding.md  3_wal.md  SUMMARY.md
durability_checker/: Cargo.toml
durability_checker/src/: lib.rs
instrument_fs/: Cargo.toml
instrument_fs/src/: lib.rs
instrument_fs/src/adapter/: glommio.rs  mod.rs
instrument_fs/src/instrument/: durability_checker.rs  mod.rs
parsley_durable_log/: Cargo.toml
parsley_durable_log/benches/: bench_simple_write.rs  simple_write.rs  std_write_page_fsync.rs
parsley_durable_log/src/: lib.rs  reader.rs  test_utils.rs  writer.rs
parsley_durable_log_bench/: Cargo.toml
parsley_durable_log_bench/src/: lib.rs
parsley_entry/: Cargo.toml
parsley_entry/src/: lib.rs
parsley_io_util/: Cargo.toml
parsley_io_util/src/: lib.rs
parsley_sim/: Cargo.toml
parsley_sim/src/: error.rs  lib.rs  real.rs  sim.rs
parsley_sim/src/sim/: fs.rs  mod.rs  task.rs  time.rs
parsley_wal/: .gitignore  Cargo.toml
parsley_wal/src/: lib.rs  reader.rs  writer.rs
pmem_storage/: Cargo.toml
pmem_storage/data/: 1.alloc  2.alloc  3.alloc  4.alloc  5.alloc
pmem_storage/examples/: check.rs
pmem_storage/src/: alloc.rs  lib.rs  persist.rs  pptr.rs
rangetree/: Cargo.toml
rangetree/src/: lib.rs  rangevec.rs
src/: main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
