[package]
authors = ["dmitry"]
edition = "2018"
name = "parsley"
version = "0.1.0"

[workspace]
members = [
    ".",
    "parsley_durable_log",
    "core",
    "rangetree",
    "pmem_storage",
    "instrument_fs",
]

[dependencies]
futures = "*"
futures-lite = "*"                 # TODO REMOVE
enum_dispatch = "*"
core = { path = "core" }
rangetree = { path = "rangetree" }
log = "*"
env_logger = "*"
glommio = "0.7"

[profile.release]
debug = true
