[package]
authors = ["dmitry"]
edition = "2018"
name = "parsley"
version = "0.1.0"

[workspace]
members = [
    ".",
    "bench_runner",
    "core",
    "instrument_fs",
    "parsley_durable_log_bench",
    "parsley_durable_log",
    "parsley_entry",
    "parsley_io_util",
    "parsley_sim",
    "pmem_storage",
    "rangetree",
]

[dependencies]
core = { path = "core" }
env_logger = "*"
futures-lite.workspace = true
futures.workspace = true
glommio.workspace = true
log = "*"
rangetree = { path = "rangetree" }

[workspace.dependencies]
crc32fast = "1"
futures = "0.3"
# TODO rule out the duplication
futures-lite = "1.12"
# Current master. No particular reason. There was no release for quite some time 
# and there were general improvements that were not released yet
glommio = { git = "https://github.com/DataDog/glommio.git", rev = "d93c460c3def6b11a224892657a6a6a80edf6311" }
histogram = "0.6.9"
pico-args = "0.5"
thiserror = "1"
rand = "0.8"


[profile.release]
debug = true
