[package]
authors = ["dmitry"]
edition = "2021"
name = "core"
version = "0.1.0"

[dependencies]
futures-lite = "1.13"
futures = "0.3"
log = "0.4"
rand.workspace = true
histogram.workspace = true
crc32fast = "1.2.1"
thiserror.workspace = true
glommio.workspace = true

[dependencies.rangetree]
path = "../rangetree"

[dependencies.pmem_storage]
path = "../pmem_storage"
