[package]
name = "instrument_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
glommio = { version = "0.7", optional = true }
futures-lite = { version = "1.12", optional = true }  

[features]
glommio = ["dep:glommio", "dep:futures-lite"]