[package]
name = "instrument_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
glommio = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }

[dev_dependencies]
test_utils = { path = "../test_utils" }

[features]
glommio = ["dep:glommio", "dep:futures-lite"]
