[package]
name = "parsley_durable_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Solution to share code between tests/benches
# See other options here https://stackoverflow.com/a/44545091
[features]
test_utils = []
cli = ["pico-args"]
bench = ["test_utils", "cli"]

[dependencies]
glommio = "0.7"
crc32fast = "1.2.1"
thiserror = "1.0.25"
histogram = "0.6.9"
futures = "0.3.21"
pico-args = { version = "0.5.0", optional = true }
# TODO make it optional, clean up with other features
instrument_fs = { path = "../instrument_fs", features = ["glommio"] }
