[package]
name = "parsley_durable_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast.workspace = true
futures.workspace = true
glommio.workspace = true
histogram.workspace = true
# TODO can it be made optional?
instrument_fs = { path = "../instrument_fs", features = ["glommio"] }
thiserror.workspace = true
parsley_io_util = { path = "../parsley_io_util" }

[dev_dependencies]
test_utils = { path = "../test_utils" }
