[package]
name = "parsley_durable_log_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
glommio.workspace = true
histogram.workspace = true
instrument_fs = { path = "../instrument_fs", features = ["glommio"] }
parsley_durable_log = { path = "../parsley_durable_log" }
parsley_entry = { path = "../parsley_entry" }
pico-args = { version = "0.5" }
test_utils = { path = "../test_utils" }
